// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag match snapshot Tag simple 1`] = `
<div>
  <span
    class="tag--color__undefined css-172fwkx"
  >
    <span
      class="tag--label"
    >
      Hello world
    </span>
  </span>
</div>
`;

exports[`Tag match snapshot TagColor 1`] = `
<div>
  <span
    class="tag--color__success css-172fwkx"
  >
    <span
      class="tag--label"
    >
      Hello world
    </span>
  </span>
</div>
`;
